More OpenPath implementation. (Almost finished) Add additional ImGui function IconSelectable. Added OpenPath resources.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,3 +31,6 @@ target_link_libraries(HGEngineReloadedImGui
 
     FilesystemWatcher
 )
+
+configure_file(resources/images/folder.png images/folder.png COPYONLY )
+configure_file(resources/images/text.png images/text.png COPYONLY )
