--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,9 @@
 cmake_minimum_required(VERSION 3.12)
 project(HGEngineReloadedImGui)
 
+# Setting cmake module path
+set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_LIST_DIR}/cmake/)
+
 set(CMAKE_CXX_STANDARD 17)
 
 set(HGRenderingOGL_USE_GLFW On)
@@ -10,6 +13,18 @@ add_subdirectory(engine)
 
 # Adding libraries
 add_subdirectory(libraries)
+
+# Internal libraries
+
+# Find LLVM
+find_package(LLVM REQUIRED CONFIG)
+message(STATUS "Found LLVM " ${LLVM_PACKAGE_VERSION})
+
+# Find clang
+find_package(Clang REQUIRED)
+
+# Finding components
+llvm_map_components_to_libnames(LLVM_COMPONENTS_MODULES core)
 
 # Adding sources
 file(GLOB_RECURSE SOURCE_FILES src/*.cpp)
@@ -23,13 +38,19 @@ target_include_directories(HGEngineReloadedImGui PUBLIC
 )
 
 target_link_libraries(HGEngineReloadedImGui
+    # HGEngine
     HGCore
     HGRenderingBase
     HGRenderingOGL
     HGStandard
     HGUtils
 
+    # Libraries
     FilesystemWatcher
+
+    # LLVM
+    LLVM
+    ${CLANG_LIBS}
 )
 
 configure_file(resources/images/folder.png images/folder.png COPYONLY )
