--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "libraries/FilesystemWatcher"]
 	path = libraries/FilesystemWatcher
 	url = https://github.com/Megaxela/FilesystemWatcher.git
+[submodule "libraries/rectpack2D"]
+	path = libraries/rectpack2D
+	url = https://github.com/TeamHypersomnia/rectpack2D.git
