--- a/libraries/CMakeLists.txt
+++ b/libraries/CMakeLists.txt
@@ -1,6 +1,3 @@
 add_subdirectory(FilesystemWatcher)
-
-file(GLOB RECTPACK_SOURCE rectpack2D/src/*.h)
-add_library(rectpack2D ${RECTPACK_SOURCE})
-target_include_directories(rectpack2D PUBLIC rectpack2D/src)
-set_target_properties(rectpack2D PROPERTIES LINKER_LANGUAGE CXX)
+prepare_rectpack_project(rectpack2D)
+prepare_libexecstream_project(libexecstream)
