--- a/.travis.yml
+++ b/.travis.yml
@@ -44,6 +44,7 @@ git:
 
 before_install:
   - git submodule update --init
+  - cd engine && git submodule update --init
 
 install:
   # Setting specific compilers
